# startupbooster_api

./: .gitignore  .pre-commit-config.yaml  .spaceignore  Dockerfile  LICENSE  README.md  Spacefile  alembic.ini  business.db  config.py  dockerignore  pyproject.toml  requirements.dev.txt  requirements.prod.txt  requirements.txt
.github/workflows/: fastapi-ac.yml  python-app.yml
alembic/: env.py  envnot.py
alembic/versions/: cb91dd2a3bcb_user_createdat.py
api/: crud.py  database.py  main.py  middleware.py  models.py  prompts.py  schemas.py  utils.py
api/alembic/: env.py
api/alembic/versions/: bcc6bc3801d2_create_the_business_datatable.py
api/logs/: apilogconfig.py  logconfig.py
api/middlewares/: redirect_resource.py  timed_request.py
api/models/: business_model.py  user_model.py
api/routes/: auth_routes.py  business_routes.py  businessdb_routes.py
api/schemas/: business_schema.py  token_schema.py  user_schema.py
api/utils/: aigenerations.py  authentication.py  crud.py
app/: main.py  utils.py
tests/: test_api.py
