[project]
name = 'Brand Booster'
version = "0.2.2"
authors = [
    {name= "Yousef Dawoud", email="yousefdawoud.dev@outlook.com"}
]
requires-python = ">=3.9"

[tool.ruff]
extend-select = [
    'C4',
    "F",   # pyflakes
    "E", # Errors
    "W", # warnnings
    "RUF", # Ruff-specific rules
    "PERF", #PREFlint
    "PL", # PYLINT
    "UP",  # pyupgrade
    'SIM', #sim for code simplification
    'TCH', #tch for type checking
    'F707', # Syntax error in forward annotation
    'I001', # Import block is un-sorted or un-formatted
    'I002', # Missing required import:
    'COM', # FLAKE COMMA
    'ANN', # flake8-annotations
    'PYI052', #Need type annotation for
    'DTZ', #FLAKE datetime
    'ASYNC', #FLAKE ASYNC
    'PLE1700'
]
# fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
show-fixes = true
target-version = "py310"
line-length = 88
ignore = ['E501', 'SIM115']


[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
  | config.py
  )/
  '''





# # Enforce type annotations for all variables, parameters, and return values
# [tool.ruff.type_annotations]
# always = true

# # Enforce naming conventions for types and type variables
# [tool.ruff.type_names]
# use = true
